[package]
name = "pmwiki-rss-discord-bot"
description = "Read an rss feed from pmWiki and push updates to a discord webhook endpoint"
license = "WTFPL"
keywords = ["discord", "pmwiki"]
repository = "https://github.com/GHGibonus/pmwiki-rss-discord-bot"
homepage = "https://github.com/GHGibonus/pmwiki-rss-discord-bot"
readme = "README.md"
categories = ["command-line-utilities"]
version = "1.0.0"
edition = "2018"

[dependencies]
ureq = { version = "2", default-features = false, features = ["tls"] }
rss = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.20"
anyhow = "1.0"

[profile.release] 
lto = "thin"
